# cjm-transcription-plugin-system

./: README.md  core.html  core.html.md  forced_alignment_core.html  forced_alignment_core.html.md  forced_alignment_interface.html  forced_alignment_interface.html.md  forced_alignment_storage.html  forced_alignment_storage.html.md  index.html  index.html.md  plugin_interface.html  plugin_interface.html.md  plugin_manager.html  plugin_manager.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  storage.html  storage.html.md
cjm_transcription_plugin_system/: _modidx.py  core.py  forced_alignment_core.py  forced_alignment_interface.py  forced_alignment_storage.py  plugin_interface.py  plugin_manager.py  storage.py
nbs/: core.ipynb  forced_alignment_core.ipynb  forced_alignment_interface.ipynb  forced_alignment_storage.ipynb  index.ipynb  nbdev.yml  plugin_interface.ipynb  plugin_manager.ipynb  storage.ipynb
test_files/: example_plugin.py
tests/: test_core.py
